fix: Update state management and toast handling after mailbox fetch

--- a/src/components/mailBox/css/mailListItem.css
+++ b/src/components/mailBox/css/mailListItem.css
@@ -111,6 +111,9 @@
   text-overflow: ellipsis;
   width: 5rem;
 }
+.mailListItem-sender.self {
+  display: none;
+}
 
 .mailListItem-title-container {
   display: flex;
