--- a/src/components/common/css/mailWritingContainer.css
+++ b/src/components/common/css/mailWritingContainer.css
@@ -72,6 +72,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   border-radius: 19px;
   border: none;
   background-image: linear-gradient(#FFFFFF, #FFFFFF);
@@ -139,16 +140,8 @@
   border: none;
 }
 
-.original-separator {
-  margin-top: 1rem;
-  padding: 0.5rem 0;
-  color: #999;
-  font-style: italic;
-  border-top: 1px dashed #ccc;
-}
-
 .writeField.original-html {
-  margin-top: 1rem;
+  margin-top: 2rem;
   padding-top: 1rem;
   border-top: 1px dashed #ccc;
   color: #444;
