--- a/src/components/menu/css/menuBar.css
+++ b/src/components/menu/css/menuBar.css
@@ -5,10 +5,10 @@
   width: 12rem;
   padding: 2rem 0.75rem;
   border-radius: 30px;
-  background: rgba(255, 255, 255, 0.42);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   transition: width 0.3s ease-in-out, padding 0.3s ease-in-out;
   z-index: 100;
+  background: white;
 }
 .menuBar-wrapper.menuBar-close {
   display: block;
@@ -16,6 +16,7 @@
   align-items: center;
   padding: 2rem 0;
   transition: width 0.3s ease-in-out, padding 0.3s ease-in-out;
+  background: white;
 }
 
 .menuBar-header {
