--- a/src/components/mailBox/css/senderGroupedItem.css
+++ b/src/components/mailBox/css/senderGroupedItem.css
@@ -17,9 +17,9 @@
 }
 
 .senderGroupedItem-sender {
-  color: #2F3438;
+  color: #2f3438;
 
-  font-size: 0.8125rem;
+  font-size: 0.9rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
