--- a/src/components/mailBox/css/fileItem.css
+++ b/src/components/mailBox/css/fileItem.css
@@ -1,11 +1,11 @@
 .fileItem-wrapper {
   display: flex;
-  flex-direction: column;
-  width: 4.75rem;
-  height: 5rem;
-  gap: 0.25rem;
-  padding: 0.125rem;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
+  width: fit-content;
+  gap: 0.25rem;
+  padding: 0.3rem 0.5rem;
   border-radius: 0.375rem;
   background: rgba(217, 217, 217, 0.35);
   box-shadow: 0px 1px 1.7px 0px rgba(0, 0, 0, 0.25);
@@ -14,32 +14,15 @@
   height: fit-content;
 }
 
-.fileItem-header {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 1.2rem;
-  gap: 0.2rem;
-  padding: 0.1rem;
-  border-radius: 0.4375rem;
-  background: #D9D9D9;
-  box-shadow: 0px 1px 1.7px 0px rgba(0, 0, 0, 0.25);
-}
-.fileItem-header.preview {
-  background: transparent;
-  box-shadow: none;
-}
-  
-
 .fileItem-icon {
-  width: 12px; 
+  width: 12px;
   height: 12px;
 }
 
 .fileItem-name {
   width: 100%;
   color: #000;
-  font-size: 0.5rem;
+  font-size: 0.6rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -51,7 +34,7 @@
   height: 3.25rem;
   align-self: stretch;
   border-radius: 0.375rem;
-  background: #B2B2B2;
+  background: #b2b2b2;
 }
 .fileItem-preview.preview {
   display: none;
