--- a/src/components/mailBox/css/mailDetail.css
+++ b/src/components/mailBox/css/mailDetail.css
@@ -3,7 +3,6 @@
   height: 100%;
   flex-direction: column;
   gap: 0.5rem;
-  overflow: hidden;
 }
 
 .mailDetail-container {
@@ -13,7 +12,7 @@
   flex-direction: column;
   border-radius: 0.625rem 0.625rem 3.5625rem 0.625rem;
   background: rgba(255, 255, 255, 0.82);
-  box-shadow: 0px 0px 10.3px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 10.3px 0px rgba(0, 0, 0, 0.15);
   overflow: hidden;
 }
 
@@ -31,7 +30,7 @@
 }
 
 .mailDetail-title {
-  color: rgba(62, 61, 61, 0.90);
+  color: rgba(62, 61, 61, 0.9);
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 700;
@@ -40,7 +39,7 @@
 }
 
 .mailDetail-sender {
-  color: rgba(62, 61, 61, 0.26);
+  color: rgba(62, 61, 61, 0.5);
   font-size: 0.625rem;
   font-style: normal;
   font-weight: 700;
@@ -54,20 +53,23 @@
 }
 
 .mailDetail-files {
+  display: flex;
+  flex-direction: column;
   gap: 0.5rem;
   margin-bottom: 1.5rem;
   flex-shrink: 0;
 }
 
 .mailDetail-files-title {
-  color: rgba(62, 61, 61, 0.60);
-  font-size: 0.5rem;
+  color: rgba(62, 61, 61, 0.7);
+  font-size: 0.6rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
 
 .mailDetail-files-list {
+  width: 100%;
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
@@ -77,7 +79,7 @@
   flex: 1;
   min-height: 0;
   overflow-y: auto;
-  color: #3E3D3D;
+  color: #3e3d3d;
   font-size: 0.625rem;
   font-style: normal;
   font-weight: 500;
@@ -95,7 +97,7 @@
 
 .mailDetail-sendAt,
 .mailDetail-receiveAt {
-  color: rgba(114, 114, 114, 0.60);
+  color: rgba(114, 114, 114, 0.6);
   text-align: right;
   font-size: 0.6875rem;
   font-style: normal;
