--- a/src/components/mailBox/css/mailListItem.css
+++ b/src/components/mailBox/css/mailListItem.css
@@ -14,7 +14,7 @@
 .mailListItem-custom-checkBox {
   display: flex;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.5rem 0.3rem 0.5rem 0.5rem;
   cursor: pointer;
   position: relative;
   transition: transform 0.1s ease-in-out;
@@ -42,18 +42,18 @@
 
 /* 체크박스 hover 시 테두리 변경 */
 .mailListItem-custom-checkBox:hover .checkmark {
-  border-color: #9590D5;
+  border-color: #9590d5;
 }
 
 /* 체크박스 선택 시 스타일 */
-.mailListItem-custom-checkBox input:checked+.checkmark {
-  background-color: #9590D5;
-  border-color: #9590D5;
+.mailListItem-custom-checkBox input:checked + .checkmark {
+  background-color: #9590d5;
+  border-color: #9590d5;
   transform: scale(1.1);
 }
 
 /* 체크된 상태에서 체크 표시 */
-.mailListItem-custom-checkBox input:checked+.checkmark::after {
+.mailListItem-custom-checkBox input:checked + .checkmark::after {
   content: "";
   position: absolute;
   top: 40%;
@@ -69,7 +69,7 @@
 .mailListItem-star-container {
   display: flex;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.3rem;
 }
 
 .mailListItem-star {
@@ -81,7 +81,7 @@
 }
 
 .mailListItem-star.important {
-  color: #FFD700;
+  color: #ffd700;
   stroke: #ddbf76;
 }
 
@@ -100,7 +100,7 @@
 }
 
 .mailListItem-sender {
-  color: #2F3438;
+  color: #2f3438;
 
   font-size: 0.75rem;
   font-style: normal;
@@ -123,9 +123,8 @@
 }
 
 .mailListItem-title {
-  color: #2F3438;
-
-  font-size: 0.6875rem;
+  color: #2f3438;
+  font-size: 0.75rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -135,26 +134,10 @@
 }
 
 .mailListItem-receiveAt {
-  color: rgba(114, 114, 114, 0.60);
-
-  font-size: 0.5rem;
+  color: rgba(62, 61, 61, 0.5);
+  font-size: 0.6rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   white-space: nowrap;
-}
-
-/* 모바일 */
-@media (max-width: 425px) {
-  .mailListItem-mailInfo {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
-  }
-
-  .mailListItem-sender {
-    width: 13rem;
-  }
 }
