--- a/src/components/mailBox/css/timeSortedList.css
+++ b/src/components/mailBox/css/timeSortedList.css
@@ -1,6 +1,6 @@
 .timeSortedList-wrapper {
   display: flex;
-  height: 100%;
+  height: 95%;
   padding: 0.75rem 1rem;
   flex-direction: column;
   align-items: center;
@@ -12,14 +12,14 @@
 .timeSortedList-header {
   display: flex;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0 0.5rem;
   gap: 0.5rem;
   align-self: stretch;
   margin-bottom: 0.5rem;
 }
 
 .timeSortedList-title {
-  color: #2F3438;
+  color: #2f3438;
   font-size: 0.75rem;
   font-style: normal;
   font-weight: 700;
