--- a/src/components/mailBox/css/senderGroupedItem.css
+++ b/src/components/mailBox/css/senderGroupedItem.css
@@ -1,5 +1,6 @@
 .senderGroupedItem-wrapper {
   display: flex;
+  width: 90%;
   padding: 0.75rem 1rem;
   flex-direction: column;
   border-radius: 1.4375rem;
