--- a/src/components/common/css/mailContainer.css
+++ b/src/components/common/css/mailContainer.css
@@ -1,12 +1,12 @@
 .mail-container-wrapper {
     position: fixed;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 1100px;
-    height: 680px;
+    width: 67.4375rem;
+    height: 41.3125rem;
     max-width: 90vw;
-    max-height: 70vh;
+    max-height: 80vh;
     min-width: 200px;
     min-height: 200px;
     margin: 0;
