--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -2,13 +2,15 @@
     width: 90%;
     height: 29px;
     position: absolute;
-    top: 10%;
+    top: 4%;
     left: 5%;
     border:none;
     outline: none;
     font-family: 'SUIT';
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 .mailTitle::placeholder{
     color: #3E3D3D;
@@ -18,12 +20,12 @@
 .recieverTitleContainer{
     display: flex;
     position: absolute;
-    top: 19%;
+    top: 10%;
     left: 5%;
     align-items: center;
     padding-left: 2%;
-    width: 88%;
-    height:6.5%;
+    width: 59.25rem;
+    height: 1.9125rem;
     background-color: rgba(205, 217, 245, 0.5);
     font-weight: bold;
     text-align: left;
@@ -35,20 +37,22 @@
     font-weight: lighter;
     color: #3E3D3D;
     font-family: 'SUIT';
+    font-size: 0.75rem;
 }
 
 .recieverTitle{
-    position: relative;
+    position: absolute;
     display: inline-block;
     margin-left: 2%;
+    top: 44%;
+    transform: translateY(-20.8%);
     white-space: nowrap;
-    width: auto;
-    height: 80%;
     font-weight: bold;
     color: #3E3D3D;
     border:none;
     outline: none;
     background-color: rgba(205, 217, 245, 0.1);
+    font-size: 0.75rem;
     overflow: visible;
 }
 
@@ -73,7 +77,7 @@
     --tags-hover-border-color: #748EEE;
     --tag-hover: #748EEE;
     --tag-border-radius: 16px;
-    --tag-pad: 0.5em 0.5em;
+    --tag-pad: 0.42em 0.42em;
     --tag-remove-btn-color: #FFFFFF;
 }
 
@@ -89,7 +93,9 @@
 }
 
 .tagify__tag {
-    position: relative;
+    position: absolute;
+    top: 40%;
+    transform: translateY(-4%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -103,7 +109,7 @@
     color: #FFFFFF;
     font-family: 'SUIT';
     font-weight: bold;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
 }
 
 .tagify__tag__removeBtn {
@@ -116,60 +122,30 @@
     align-items: center;
     right: 2.5%;
     color: #748EEE;
+    font-size: 0.8125rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 
 .isToMe {
     position: absolute;
     display: flex;
     align-items: center;
-    right: 10.2%;
+    right: 8.2%;
     border-color: #748EEE;
     outline: none;
-    
-}
-
-.refTitleContainer {
-    display: flex;
-    position: absolute;
-    top: 26.5%;
-    left: 5%;
-    align-items: center;
-    padding-left: 2%;
-    width: 88%;
-    height:6.5%;
-    background-color: rgba(205, 217, 245, 0.5);
-    font-weight: bold;
-    text-align: left;
-    border-radius: 50px;
-    z-index: 1;
-}
-
-.refLabel {
-    font-weight: lighter;
-    color: #3E3D3D;
-}
-
-.refTitle {
-    position: relative;
-    margin-left: 2%;
-    width: 76%;
-    height: 80%;
-    font-weight: bold;
-    color: #3E3D3D;
-    border:none;
-    outline: none;
-    background-color: rgba(205, 217, 245, 0.1);
 }
 
 .attachedContainer{
     display: flex;
     position: absolute;
-    top: 34%;
+    top: 16%;
     left: 5%;
     align-items: center;
     padding-left: 2%;
-    width: 88%;
-    height: 15%;
+    width: 59.25rem;
+    height: 3.625rem;
     background-color: rgba(205, 217, 245, 0.5);
     font-weight: bold;
     text-align: left;
@@ -180,8 +156,8 @@
 .attatchedIcon{
     position: absolute;
     display: flex;
-    top: 10%;
-    left: 2.4%;
+    top: 24%;
+    left: 2%;
     width: 1rem;
     height: auto;
 }
@@ -189,8 +165,8 @@
 .attachedLabel{
     position: absolute;
     display: flex;
-    top: -4.8%;
-    left: 4.8%;
+    top: 2.8%;
+    left: 4%;
     color: #3E3D3D;
     font-family: 'SUIT';
     font-size: 0.8125rem;
@@ -204,7 +180,7 @@
     position: absolute;
     width: 88%;
     height: 6%;
-    top: 52%;
+    top: 25.8%;
 }
 
 .aiOnLogo {
@@ -219,6 +195,7 @@
 .aiText {
     position: absolute;
     display: inline-block;
+    top: 10%;
     transform: translateY(-36%);
     left: 0.54rem;
     font-family: 'SUIT';
