fix: Responsive Design

--- a/src/components/common/css/mailContainer.css
+++ b/src/components/common/css/mailContainer.css
@@ -39,7 +39,11 @@
     z-index: 2;
 }
 
+/* -------------------------------------------------------------------------- */
+/*                    반응형 미디어 쿼리 (화면 크기에 따른 조정)               */
+/* -------------------------------------------------------------------------- */
 
+/* [1] 중간 화면 / 태블릿 (최대 768px) */
 @media (max-width: 768px) {
     .mail-container-wrapper {
         width: 40vw;
@@ -58,6 +62,7 @@
     }
 }
 
+/* [2] 작은 화면 (최대 576px) */
 @media (max-width: 576px) {
     .mail-container-wrapper {
         width: 50vw;
