--- a/src/components/menu/css/subMenu.css
+++ b/src/components/menu/css/subMenu.css
@@ -4,7 +4,7 @@
   border-radius: 0px;
 
   &:hover {
-    background-color: #FFF;
+    background-color: #fff;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     transition: transform 0.3s ease, opacity 0.3s ease;
     transform: translateX(3px);
@@ -19,8 +19,8 @@
   align-items: flex-start;
   justify-content: center;
   position: absolute;
-  top: 0;        
-  left: 100%; 
+  top: 0;
+  left: 100%;
   overflow: hidden;
 }
 
@@ -51,25 +51,25 @@
   justify-content: center;
   gap: 0;
   border-radius: 0px;
-  pointer-events: none; 
+  pointer-events: none;
 }
 .subMenu-container.active {
-  background-color: #EFEFFF;
+  background-color: #efefff;
 }
 .subMenu-container.subMenu-subMenuOpen.active {
   background-color: transparent;
 }
-.subMenu-container.subMenu-subMenuOpen.active .subMenu-icon{
-  color: #2F3438;
+.subMenu-container.subMenu-subMenuOpen.active .subMenu-icon {
+  color: #2f3438;
 }
-.subMenu-container.active .subMenu-icon{
-  color: #9590D5;
+.subMenu-container.active .subMenu-icon {
+  color: #9590d5;
 }
-.subMenu-container.subMenu-close.active{
+.subMenu-container.subMenu-close.active {
   background-color: transparent;
 }
-.subMenu-container.subMenu-close.active .subMenu-icon{
-  color: #9590D5;
+.subMenu-container.subMenu-close.active .subMenu-icon {
+  color: #9590d5;
 }
 
 .subMenu-textContainer {
@@ -79,7 +79,7 @@
 }
 
 .subMenu-icon {
-  color: #2F3438;
+  color: #2f3438;
 }
 .subMenu-icon.subMenu-close {
   width: 1.7rem;
@@ -103,13 +103,14 @@
 .subMenu-arrow {
   stroke-width: 1px;
   stroke: #2f3438;
+  transform: rotate(180deg);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 .subMenu-arrow.subMenu-close {
   display: none;
 }
 .subMenu-arrow.subMenu-subMenuOpen {
-  transform: rotate(180deg);
+  transform: rotate(0deg);
 }
 
 .subMenu-subMenuItemsContainer {
