feat: Add animation

--- a/src/components/common/css/mailWritingContainer.css
+++ b/src/components/common/css/mailWritingContainer.css
@@ -169,23 +169,29 @@
   height: 0.6875rem;
 }
 
-.loadingText {
-  position: absolute;
-  top: -2rem;
-  width: 3.3125rem;
-  height: 0.71225rem;
-  flex-shrink: 0;
+.loadingWrapper span {
+  display: inline-block;
+  margin: 4em;
+  animation: loading .7s infinite alternate;
+}
 
-  font-family: 'SUIT';
-  font-size: 0.82rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
+loadingWrapper span:nth-child(1) {
+  animation-delay: .1s;
+}
+loadingWrapper span:nth-child(2) {
+  animation-delay: .2s;
+}
+loadingWrapper span:nth-child(3) {
+  animation-delay: .3s;
+}
 
-  background: linear-gradient(90deg, #D692F8 0%, #6C57F3 3.78%, #5F6FFC 10.03%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+@keyframes loading {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.8);
+  }
 }
 
 .writeField.original-html {
