fix: Mail write form style

--- a/src/components/common/css/mailContainer.css
+++ b/src/components/common/css/mailContainer.css
@@ -3,12 +3,8 @@
     top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 67.4375rem;
-    height: 41.3125rem;
-    max-width: 90vw;
-    max-height: 80vh;
-    min-width: 200px;
-    min-height: 200px;
+    width: 72vw;
+    height: 81vh;
     margin: 0;
 }
 
@@ -37,46 +33,4 @@
     background: #FFFFFF;
     box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
     z-index: 2;
-}
-
-/* -------------------------------------------------------------------------- */
-/*                    반응형 미디어 쿼리 (화면 크기에 따른 조정)               */
-/* -------------------------------------------------------------------------- */
-
-/* [1] 중간 화면 / 태블릿 (최대 768px) */
-@media (max-width: 768px) {
-    .mail-container-wrapper {
-        width: 40vw;
-        height: 40vw;
-    }
-
-    .container-shadow {
-        border: 10px solid #7fACEE;
-        filter: blur(7px);
-    }
-
-    .mail-container {
-        border-radius: 3%;
-        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
-        font-size: clamp(0.8em, 0.9em + 0.5vw, 1em);
-    }
-}
-
-/* [2] 작은 화면 (최대 576px) */
-@media (max-width: 576px) {
-    .mail-container-wrapper {
-        width: 50vw;
-        height: 50vw;
-    }
-
-    .container-shadow {
-        border: 8px solid #7FACEE;
-        filter: blur(5px);
-    }
-
-    .mail-container {
-        border-radius: 4%;
-        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
-        font-size: clamp(0.7em, 0.8em + 0.5vw, 0.9em);
-    }
 }
