--- a/src/components/common/css/mailWritingContainer.css
+++ b/src/components/common/css/mailWritingContainer.css
@@ -1,21 +1,21 @@
 .write-container-wrapper {
-  position: fixed;
+  position: absolute;
   top: 65.6%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 59.25rem;
-  height: 27.12544rem;
+  width: 63vw;
+  height: 52vh;
   margin: 0;
   z-index: 0;
 }
 
 .write-container-wrapper.on {
-  position: fixed;
+  position: absolute;
   top: 65.6%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 59.25rem;
-  height: 27.12544rem;
+  width: 63vw;
+  height: 52vh;
   margin: 0;
   z-index: 0;
 }
@@ -24,9 +24,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  width: 57.9375rem;
-  height: 26.144rem;
+  width: 97%;
+  height: 94%;
   flex-shrink: 0;
   border-radius: 19px;
   background: #fff;
@@ -42,9 +41,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  width: 57.9375rem;
-  height: 26.144rem;
+  width: 97%;
+  height: 94%;
   flex-shrink: 0;
   border-radius: 19px;
   background: #fff;
@@ -60,7 +58,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -75,9 +72,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   border: 4px solid transparent;
   border-radius: 19px;
   background-image: linear-gradient(#ffffff, #ffffff),
@@ -100,10 +97,11 @@
 
 .gptSuggestionBox {
   position: absolute;
-  width: 21.1875rem;
+  display: flex;
+  top: 7.8%;
+  left: 48%;
+  width: 50%;
   height: 23.8125rem;
-  right: 2.8%;
-  margin-top: 8px;
   padding: 4px 6px;
   color: #ccc;
   font-style: italic;
@@ -129,11 +127,9 @@
 }
 
 .writeField {
-  position: absolute;
   display: flex;
-  width: 56.375rem;
-  height: 24rem;
-  top: 1.6rem;
+  width: 90%;
+  height: 90%;
   overflow-y: auto;
   resize: none;
   font-size: 1.2em;
@@ -142,12 +138,12 @@
 }
 
 .writeField.on {
-  display: flex;
   position: absolute;
-  width: 34.5rem;
-  height: 24rem;
-  top: 1.6rem;
-  left: 2.24%;
+  top: 7.8%;
+  left: 4.7%;
+  display: flex;
+  width: 42%;
+  height: 90%;
   overflow-y: auto;
   resize: none;
   font-size: 1.2em;
