--- a/src/components/menu/css/menuItem.css
+++ b/src/components/menu/css/menuItem.css
@@ -14,7 +14,7 @@
   border-radius: 0px;
 
   &:hover {
-    background-color: #FFF;
+    background-color: #fff;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     transition: transform 0.3s ease, opacity 0.3s ease;
     transform: translateX(3px);
@@ -29,8 +29,8 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 0;        
-  left: 100%; 
+  top: 0;
+  left: 100%;
   height: 100%;
 }
 
@@ -46,6 +46,7 @@
 
 .menuItem-container {
   display: flex;
+  width: 100%;
   align-items: center;
   gap: 0.5rem;
   padding: 0.5rem 1rem;
@@ -58,14 +59,14 @@
   border-radius: 0px;
 }
 .menuItem-container.active {
-  background-color: #EFEFFF;
+  background-color: #efefff;
 }
 .menuItem-container.menuItem-close.active .menuItem-icon {
-  color: #9590D5;
+  color: #9590d5;
 }
 
 .menuItem-icon {
-  color: #2F3438;
+  color: #2f3438;
 }
 .menuItem-icon.menuItem-close {
   width: 1.7rem;
@@ -88,11 +89,11 @@
 
 .menuItem-shadowBox {
   display: none;
-  width:fit-content;
+  width: fit-content;
   height: 2.6875rem;
   padding: 0 1rem;
   border-radius: 0rem 1.8125rem 1.8125rem 0rem;
-  background: #FFF;
+  background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
