--- a/src/components/mailBox/css/timeSortedList.css
+++ b/src/components/mailBox/css/timeSortedList.css
@@ -36,3 +36,45 @@
   white-space: nowrap;
   font-size: 0.8rem;
 }
+
+.loadMore-wrapper {
+  position: relative;
+  width: 100%;
+  height: 3rem;
+  margin-top: -1rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.loadMore-gradient {
+  position: absolute;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.7),
+    rgba(247, 249, 252, 0.9)
+  );
+  pointer-events: none;
+}
+
+.loadMore-icon {
+  position: relative;
+  font-size: 1.25rem;
+  color: #a7a7a7;
+  animation: bounce 1.4s infinite;
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+}
