--- a/src/components/mailBox/css/timeSortedList.css
+++ b/src/components/mailBox/css/timeSortedList.css
@@ -49,19 +49,6 @@
   z-index: 1;
 }
 
-.loadMore-gradient {
-  position: absolute;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0.7),
-    rgba(247, 249, 252, 0.9)
-  );
-  pointer-events: none;
-}
-
 .loadMore-icon {
   position: relative;
   font-size: 1.25rem;
@@ -69,7 +56,7 @@
   animation: bounce 1.4s infinite;
 }
 
-@keyframes bounce {
+/* @keyframes bounce {
   0%,
   100% {
     transform: translateY(0px);
@@ -77,4 +64,4 @@
   50% {
     transform: translateY(5px);
   }
-}
+} */
