--- a/src/screens/css/sendCompleteScreen.css
+++ b/src/screens/css/sendCompleteScreen.css
@@ -1,5 +1,5 @@
 .completeBackground {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
@@ -11,8 +11,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    opacity: 80%;
-    z-index: 9999;
+    opacity: 0.8;
+    z-index: 10000;
 }
 
 .sendCompleteIcon {
