--- a/src/screens/css/sendCompleteScreen.css
+++ b/src/screens/css/sendCompleteScreen.css
@@ -1,5 +1,5 @@
 .completeBackground {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    opacity: 0.8;
+    opacity: 80%;
     z-index: 10000;
 }
 
