--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -36,24 +36,24 @@
   border-radius: 1.1875rem;
   align-self: stretch;
   transition: margin-left 0.3s ease-in-out, width 0.3s ease-in-out;
-  background: 
-    linear-gradient(270deg, rgba(255, 255, 255, 0) 40%, #FFF 90%),
-    conic-gradient(from 133deg at 53.57% 50%,
-      #E0DFF2 0deg,
-      #D7E1F5 147.15deg, 
-      #CAD9F0 231.97deg, 
-      #D8DCF1 306.66deg, 
-      #EFEFFF 336.85deg, 
-      #E2DEF1 360deg
+  background: linear-gradient(270deg, rgba(255, 255, 255, 0) 40%, #fff 90%),
+    conic-gradient(
+      from 133deg at 53.57% 50%,
+      #e0dff2 0deg,
+      #d7e1f5 147.15deg,
+      #cad9f0 231.97deg,
+      #d8dcf1 306.66deg,
+      #efefff 336.85deg,
+      #e2def1 360deg
     );
-  box-shadow: 4px 4px 20px 0px rgba(149, 144, 213, 0.15), 
-              -4px -4px 20px 0px rgba(127, 172, 238, 0.15), 
-              0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 4px 4px 20px 0px rgba(149, 144, 213, 0.15),
+    -4px -4px 20px 0px rgba(127, 172, 238, 0.15),
+    0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
 }
 
 /* 메일 컨텐츠 공통 스타일 */
 .mailBoxLayout-common {
-  padding: 0.5rem 0.5rem 0;
+  padding: 0.5rem;
   width: 100%;
   box-sizing: border-box;
   height: 80vh;
@@ -62,14 +62,4 @@
   display: flex;
   position: relative;
   min-height: 0;
-}
-
-/* 모바일 */
-@media (max-width: 425px) {
-  .mailBoxLayout-common {
-    padding: 0 0 0;
-    width: 100%;
-    box-sizing: border-box;
-    height: 80vh;
-  }
 }
