--- a/src/components/mailBox/css/timeSortedList.css
+++ b/src/components/mailBox/css/timeSortedList.css
@@ -7,6 +7,8 @@
   border-radius: 1.4375rem;
   background: rgba(255, 255, 255, 0.42);
   box-shadow: 2px 2px 6.8px 0px rgba(0, 0, 0, 0.25);
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 .timeSortedList-header {
@@ -35,6 +37,8 @@
 .timeSortedList-container p {
   white-space: nowrap;
   font-size: 0.8rem;
+  width: 27rem;
+  padding: 0 0 0 0.5rem;
 }
 
 .loadMore-wrapper {
