--- a/src/screens/mailBox/css/mailScreen.css
+++ b/src/screens/mailBox/css/mailScreen.css
@@ -7,12 +7,12 @@
 }
 
 .MailScreen-list {
-  flex: 1; 
+  flex: 1;
   flex-basis: 30%;
   width: 100%;
   box-sizing: border-box;
   height: 100%;
-  padding: 0.5rem;
+  padding: 0.2rem;
 }
 
 .MailScreen-preview {
@@ -22,6 +22,7 @@
   box-sizing: border-box;
   height: 100%;
   overflow-x: auto;
+  scrollbar-width: none;
   padding: 0.5rem;
 }
 
