--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -1,7 +1,7 @@
 /* 기본 스타일 (모바일 우선 접근 방식) */
 .mailTitle {
     width: 60vw;
-    height: 29px;
+    height: 4vh;
     position: absolute;
     top: 4%;
     left: 6%;
@@ -27,14 +27,15 @@
     flex-direction: column;
     gap: 0.36rem;
     width: 63vw;
-    height: 5.6rem;
+    height: 12vh;
+    align-items: center;
 }
 
 .recieverTitleWrapper {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 1.9125rem;
+    height: 32%;
     background-color: rgba(205, 217, 245, 0.5);
     font-weight: bold;
     text-align: left;
@@ -119,38 +120,32 @@
     color: #FFFFFF;
     font-family: "SUIT";
     font-weight: bold;
-    font-size: 0.75rem;
+    font-size: 0.7rem;
 }
 
 .tagify__tag__removeBtn {
     color: #ff0000;
 }
 
-.toMeWrapper {
-    position: absolute;
-    display: flex;
-    left: 88.8%;
-    justify-content: flex-start;
-    flex-direction: row;
-    width: 8vw;
-    height: 1rem;
-    gap: 0.4rem;
-    align-items: center;
-}
 
 .toMeText {
-    align-items: center;
+    position: absolute;
+    right: 1%;
+    width: 3.2rem;
     color: #748EEE;
-    font-size: 0.8125rem;
+    font-size: 0.75rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-right: 0.8rem;
+
 }
 
 .isToMe {
-    align-items: center;
+    position: absolute;
+    right: 6%;
+    width: 2.4rem;
     border-color: #748EEE;
+    margin-right: 0.2rem;
     outline: none;
 }
 
@@ -158,11 +153,12 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 3.625rem;
+    height: 80%;
     background-color: rgba(205, 217, 245, 0.5);
     font-weight: bold;
     text-align: left;
     border-radius: 15px;
+    cursor: pointer;
     z-index: 1;
 }
 
@@ -185,15 +181,15 @@
 
 .switchContainer {
     position: absolute;
-    top: 25.8%;
+    top: 26.2%;
     left: 7.2%;
     display: flex;
     align-items: center;
     flex-direction: row;
-    gap: 0.4rem;
+    gap: 0.2rem;
     width: 20vw;
     height: 4vh;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
 }
 
 .aiOnLogo {
@@ -345,4 +341,50 @@
     font-weight: 500;
     text-align: center;
     padding: 1rem;
+}
+
+@media ((min-width: 1280px) and (max-width: 1400px)) {
+    .mailTitle {
+        font-size: 1.33rem;
+    }
+
+    .recieverTitle {
+        font-size: 0.8rem;
+    }
+    .recieverLabel {
+        font-size: 0.8rem;
+        padding-left: 0.85rem;
+    }
+
+    .tagify__tag-text {
+        font-size: 0.74rem;   
+    }
+
+    .toMeText {
+        font-size: 0.8rem;
+    }
+
+    .attatchedIcon {
+        width: 1.06rem;
+        height: auto;
+        padding-left: 0.85rem;
+    }
+
+    .aiOnLogo {
+        width: 0.7rem;
+        height: 0.76rem;
+    }
+    .aiText {
+        font-size: 0.93rem;
+    }
+    .writeContainer {
+        font-size: 0.73rem;
+    }
+    .sendButton,
+    .reservationButton {
+        width: 8.23rem;
+        height: 2.45rem;
+        font-size: 0.95rem;
+    }
+
 }
