feat: Add auto save Toast

--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -1,4 +1,8 @@
-/* 기본 스타일 (모바일 우선 접근 방식) */
+.autoSaveToast {
+    position: fixed;
+    top: -8%;
+    z-index: 99999;
+}
 .mailTitle {
     width: 60vw;
     height: 4vh;
