--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -1,8 +1,32 @@
+@keyframes slideDown {
+    from {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+}
+@keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+}
 .autoSaveToast {
     position: fixed;
     top: -8%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    animation: slideDown 0.4s ease-out forwards;
     z-index: 99999;
 }
+.autoSaveToast.hide {
+    animation: fadeOut 0.3s ease-in forwards;
+}
+
 .mailTitle {
     width: 60vw;
     height: 4vh;
