--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -10,9 +10,11 @@
 }
 @keyframes fadeOut {
     from {
+      transform: translateY(100%);
       opacity: 1;
     }
     to {
+      transform: translateY(0);
       opacity: 0;
     }
 }
